--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -39,7 +39,7 @@ body {
 .app-container {
 	position: relative;
 	width: 100vw;
-	min-height: max-content;
+	max-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -52,7 +52,7 @@ body {
 	}
 
 	.app-body {
-		min-height: 40vh;
+		min-height: 80vh;
 	}
 
 	&:has(.app-body) {
@@ -141,6 +141,12 @@ $link-underline-offset: -0.5ch !default;
 	padding: 0.5em 1em;
 	font-size: 0.875em;
 	animation: error-fade-in 0.3s ease-in-out;
+}
+
+// PRICE TEXT
+.price {
+	color: $secondary-color !important;
+	font-weight: $font-weight-semibold !important;
 }
 
 @keyframes error-fade-in {
