--- a/src/app/reset.scss
+++ b/src/app/reset.scss
@@ -39,7 +39,7 @@ html {
 body {
 	background-color: $white;
 	color: $txt-primary;
-	font-family: var(--font-be-vietnam-pro);
+	font-family: var(--font-montserrat);
 }
 
 a {
