--- a/src/app/(public-routes)/profile/Profile.module.scss
+++ b/src/app/(public-routes)/profile/Profile.module.scss
@@ -65,6 +65,7 @@
 	font-size: 1em;
 
 	&__summary-info {
+		position: relative;
 		display: flex;
 		align-items: center;
 		gap: 0.75em;
@@ -109,7 +110,7 @@
 	&__actions {
 		position: relative;
 		width: 100%;
-		height: 100%;
+		height: max-content;
 		display: flex;
 		flex-direction: column;
 		gap: 0.5em;
