--- a/src/components/navigation/admin-sidebar/AdminSidebar.module.scss
+++ b/src/components/navigation/admin-sidebar/AdminSidebar.module.scss
@@ -1,12 +1,14 @@
 @use '../../../app/vars' as *;
+@use 'sass:color';
 
 .sidebar {
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-	width: 15rem;
+	width: 18em;
 	background-color: $white;
+	transition: width 0.25s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 
 	&-header {
 		display: flex;
@@ -43,6 +45,34 @@
 				font-size: 0.875em;
 				color: $txt-white;
 				white-space: nowrap;
+			}
+		}
+
+		&-collapse {
+			position: absolute;
+			top: 0.5em;
+			right: 0.5em;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			cursor: pointer;
+			color: $txt-primary;
+			padding: 0.25em;
+			background-color: $white;
+			border-radius: 0.25em;
+			transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+
+			svg {
+				aspect-ratio: 1;
+				font-size: 0.875em;
+			}
+
+			&:hover {
+				background-color: color.adjust($color: $white, $lightness: -10%);
+			}
+
+			&:active {
+				background-color: color.adjust($color: $white, $lightness: -25%);
 			}
 		}
 	}
@@ -115,5 +145,40 @@
 				}
 			}
 		}
+	}
+
+	&.hide {
+		opacity: 0;
+		width: 0;
+		z-index: -1;
+	}
+}
+
+.sidebar-expand {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: max-content;
+	cursor: pointer;
+	color: $white;
+	padding: 0.25em;
+	background-color: $primary-color;
+	border-radius: 0 0 0.25em 0;
+	transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+
+	svg {
+		aspect-ratio: 1;
+		font-size: 1em;
+	}
+
+	&:hover {
+		background-color: color.adjust($color: $primary-color, $lightness: -10%);
+	}
+
+	&:active {
+		background-color: color.adjust($color: $primary-color, $lightness: -25%);
 	}
 }
