chore(admin dashboard): convert to dynamic route

--- a/src/app/(admin-routes)/Admin.module.scss
+++ b/src/app/(admin-routes)/Admin.module.scss
@@ -168,6 +168,7 @@
 
 .section {
 	width: 100%;
+	min-width: max-content;
 	background-color: $white;
 	box-shadow: $box-shadow-card;
 	padding: 1em;
