--- a/src/components/ui/loading/Loading.module.scss
+++ b/src/components/ui/loading/Loading.module.scss
@@ -59,6 +59,7 @@
 	&__text {
 		font-size: $font-size-16;
 		font-weight: $font-weight-semibold;
+		text-align: center;
 		color: $txt-primary;
 		letter-spacing: 0.2em;
 	}
