--- a/src/app/(public-routes)/profile/_profile-vars.scss
+++ b/src/app/(public-routes)/profile/_profile-vars.scss
@@ -1,2 +1,6 @@
 $part-padding: 0.75em;
 $part-border-radius: 0.5em;
+
+// Order detail specific variables
+$order-detail-spacing: 1.5em;
+$order-detail-section-padding: 1.25em;
