--- a/src/components/ui/loading/Loading.module.scss
+++ b/src/components/ui/loading/Loading.module.scss
@@ -3,10 +3,7 @@
 .loading {
 	&__container {
 		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
+		inset: 0 0 0 0;
 		display: flex;
 		justify-content: center;
 		align-items: center;
